--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link href="css/fullpage.css" rel="stylesheet" type="text/css"/>
+    <link href="css/pc.css" rel="stylesheet" type="text/css"/>
+    <link href="css/mobile.css" rel="stylesheet" type="text/css"/>
 
     <script src="http://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="script/jQuery_mas_media.js" type="text/javascript"></script>  
@@ -15,15 +17,29 @@
 
 <body>
     <header>
-        <h1>Viewport size</h1>
-        <h2>Multidevice</h2>
+        <img src="img/balon.jpeg" alt="Balon"/>
+        <div>
+            <h1>Deportes</h1>
+            <h2>Futbol</h2>
+        </div>
+        <img src="img/beinsa.jpg" alt="Estadio"/>
     </header>
     <main>
-            <h2>Viewport dimensions WxH</h3>
-            <h3></h3>
+        <nav>
+            <li>Inicio</li>
+            <li>Mision</li>
+            <li>Vision</li>
+        </nav>
+            <img src="img/arena.jpg"/>
+            <div>
+                <h2>Dimensiones de Pantalla Ancho X Alto</h3>
+                <h3></h3>
+            </div>
+            <img src="img/balon2.jpg"/>
     </main>
     <footer>
-        <p><span></span>  IES Camp de Morvedre</p>
+        <p>Julian David Ramos Gomez</p>
+        <p><span></span>IES Camp de Morvedre</p>
     </footer>
     
 </body>
