--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/pc.css" rel="stylesheet" type="text/css"/>
     <link href="css/mobile.css" rel="stylesheet" type="text/css"/>
 
-    <script src="http://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="script/jQuery_mas_media.js" type="text/javascript"></script>  
     <script src="script/date.en.js" type="text/javascript"></script>  
 
